--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="כוח גדול">
-<meta property="og:description" content="ללמוד 'יותר">
+<meta property="og:title" content="هل تريد نفس الشيء؟">
+<meta property="og:description" content="لا تفوت">
 <meta property="og:image" content="https://i.imgur.com/bziGuqw.jpg">
   <title>Fitness blog</title>
   <meta name="description" content="Best">
